--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2Usc68MG_jUZz8Um-lxLdJFuby2J2IS8">
+    // &callback=initMap
+  </script>
 </head>
 
 <body>
